# introspect

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  introspect  pyproject.toml
.claude/skills/introspect/: SKILL.md
.claude/skills/introspect/rules/: discovery.md  driving-processes.md  line-ranges.md  markers-and-filters.md  searching.md  storage-layout.md  tailing.md  time-queries.md
.github/workflows/: ci.yml
src/introspect/: __init__.py  cli.py  filters.py  marks.py  reader.py  run.py  search.py  send.py  storage.py  timestamps.py
tests/: test_cli.py  test_marks_filters.py  test_reader.py  test_run_integration.py  test_storage.py  test_timestamps.py
