[project]
name = "introspect"
version = "0.1.0"
description = "Run anything under a pty, log every byte, query it later."
requires-python = ">=3.11"
dependencies = ["click>=8.1"]

[project.scripts]
introspect = "introspect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/introspect"]
